feat: Basic navbar

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -52,7 +52,8 @@
       "imports": {
         "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
         "@TachMonShop/root-config": "http://localhost:9000/TachMonShop-root-config.js",
-        "@TachMonShop/navbar": "http://localhost:10000/TachMonShop-navbar.js"
+        "@TachMonShop/navbar": "http://localhost:10000/TachMonShop-navbar.js",
+        "@TachMonShop/styleguide": "http://localhost:11000/TachMonShop-styleguide.js"
       }
     }
   </script>
@@ -81,6 +82,7 @@
   </noscript>
   <script>
     System.import('@TachMonShop/root-config');
+    System.import('@TachMonShop/styleguide')
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
