--- a/client/styleguide/src/global.css
+++ b/client/styleguide/src/global.css
@@ -18329,7 +18329,8 @@ video {
   --color-white: #fdfffc;
   --color-black: #171817;
   --color-overlay: rgba(253, 255, 252, 0.8);
-  font-family: "Josefin Sans", san-serif;
+  font-family: "Inter", san-serif;
+  font-weight: 400;
 }
 
 @media (min-width: 640px){
