--- a/client/styleguide/src/fonts.scss
+++ b/client/styleguide/src/fonts.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 $weights: ("thin": 100, "extralight": 200 , "light": 300 , "regular": 400, "semibold": 500, "bold": 600, "extrabold":700);
 
 @each $type, $weight in $weights {
-.josefin-sans-#{$type} {
-  font-family: "Josefin Sans", sans-serif;
+.inter-#{$type} {
+  font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: $weight;
   font-style: normal;
