--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -50,14 +50,20 @@
     <script type="systemjs-importmap">
     {
       "imports": {
-        "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
         "@TachMonShop/root-config": "http://localhost:9000/TachMonShop-root-config.js",
         "@TachMonShop/navbar": "http://localhost:10000/TachMonShop-navbar.js",
         "@TachMonShop/styleguide": "http://localhost:11000/TachMonShop-styleguide.js",
         "@TachMonShop/footer": "http://localhost:10001/TachMonShop-footer.js"
       }
     }
-  </script>
+    </script>
+    <script type="systemjs-importmap">
+      {
+        "imports": {
+          "@TachMonShop/home": "http://localhost:10002/TachMonShop-home.js"
+        }
+      }
+    </script>
     <% } %>
 
       <!--
