--- a/client/apps/home/src/components/category/styles/categories-list.css
+++ b/client/apps/home/src/components/category/styles/categories-list.css
@@ -1,7 +1,11 @@
 .categories-list {
     display: flex;
     flex-direction: column;
-    gap: 16px;
     border-right: 1px solid var(--color-overlay);
     padding-top: 40px;
+    min-width: 200px;
+}
+
+.hidden {
+    display: none;
 }
