--- a/client/apps/home/src/components/category/styles/category.css
+++ b/client/apps/home/src/components/category/styles/category.css
@@ -6,10 +6,21 @@
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    padding: 16px 16px 16px 0;
+}
+
+.category:hover {
+    background-color: var(--color-secondary);
 }
 
 .category button {
-    height: 100%;
+    height: 24px;
+    width: 24px;
     aspect-ratio: 1;
-    padding: 6px;
+}
+
+.category button :first-child {
+    height: 16px;
+    width: 16px;
+    aspect-ratio: 1;
 }
