--- a/client/apps/home/src/components/banner/banner.css
+++ b/client/apps/home/src/components/banner/banner.css
@@ -13,6 +13,12 @@
     margin: 24px 0 24px 24px;
 }
 
+@media (max-width: 1000px) {
+    .slideshow {
+        margin: 10px;
+    }
+}
+
 .slideshow-slider {
     position: absolute;
     left: 0;
