--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -41,7 +41,7 @@
       }
     }
   </script>
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js" as="script">
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/single-spa@5.9.4/lib/system/single-spa.min.js" as="script">
 
   <!-- Add your organization's prod import map URL to this script's src  -->
   <!-- <script type="systemjs-importmap" src="/importmap.json"></script> -->
@@ -50,17 +50,17 @@
     <script type="systemjs-importmap">
     {
       "imports": {
-        "@TachMonShop/root-config": "http://localhost:9000/TachMonShop-root-config.js",
-        "@TachMonShop/navbar": "http://localhost:10000/TachMonShop-navbar.js",
-        "@TachMonShop/styleguide": "http://localhost:11000/TachMonShop-styleguide.js",
-        "@TachMonShop/footer": "http://localhost:10001/TachMonShop-footer.js"
-      }
+        "@TachMonShop/navbar": "//localhost:10000/TachMonShop-navbar.js",
+        "@TachMonShop/styleguide": "//localhost:11000/TachMonShop-styleguide.js",
+        "@TachMonShop/footer": "//localhost:10001/TachMonShop-footer.js",
+        "@TachMonShop/root-config": "//localhost:9000/TachMonShop-root-config.js"
+     }
     }
     </script>
     <script type="systemjs-importmap">
       {
         "imports": {
-          "@TachMonShop/home": "http://localhost:10002/TachMonShop-home.js"
+          "@TachMonShop/home": "//localhost:10002/TachMonShop-home.js"
         }
       }
     </script>
@@ -89,7 +89,7 @@
   </noscript>
   <script>
     System.import('@TachMonShop/root-config');
-    System.import('@TachMonShop/styleguide')
+    System.import('@TachMonShop/styleguide');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
