feat: Basically home

--- a/client/apps/home/src/components/sections/styles/flash-sale.css
+++ b/client/apps/home/src/components/sections/styles/flash-sale.css
@@ -3,19 +3,37 @@
     flex-direction: row;
     gap: 8px;
 
-    > button {
+    >button {
         display: relative;
         background-color: var(--color-secondary);
         height: 45px;
         width: 45px;
         border-radius: 22.5px;
 
-        > * {
+        >* {
             display: absolute;
             top: 0;
             bottom: 0;
             left: 0;
             right: 0;
         }
+    }
+}
+
+
+.view-more-btn {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+
+    >button {
+        display: block;
+        background-color: var(--color-danger);
+        color: var(--color-white);
+        width: 160px;
+        height: 55px;
+        border-radius: 4px;
+        text-align: center;
     }
 }
