--- a/client/apps/home/src/components/sections/styles/browse-categories.css
+++ b/client/apps/home/src/components/sections/styles/browse-categories.css
@@ -19,3 +19,33 @@
         }
     }
 }
+
+.category-browser {
+    min-width: 170px;
+    max-width: 170px;
+    height: 145px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid var(--color-overlay);
+    border-radius: 4px;
+
+    * {
+        color: var(--color-primary);
+    }
+
+    :first-child {
+        width: 56px;
+        height: 56px;
+    }
+}
+
+.category-browser:hover {
+    background-color: var(--color-danger);
+    border: none;
+    cursor: pointer;
+    * {
+        color: var(--color-white);
+    }
+}
