--- a/client/styleguide/src/components/product.css
+++ b/client/styleguide/src/components/product.css
@@ -17,11 +17,11 @@
 }
 
 .product-img {
+    display: absolute;
     aspect-ratio: 27 / 25;
     background-color: var(--color-secondary);
     width: auto;
     object-fit: contain;
-    border-radius: 4px;
 }
 
 .product-info {
@@ -90,4 +90,29 @@
         justify-content: center;
         align-items: center;
     }
+}
+
+.product-img-container {
+    position: relative;
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+.product-img-container:hover {
+    .add-to-cart-btn {
+        display: block;
+    }
+}
+
+.add-to-cart-btn {
+    display: absolute;
+    top: 0px;
+    height: 40px;
+    transform: translateY(-40px);
+    width: 100%;
+    background-color: var(--color-primary);
+    color: white;
+    text-align: center;
+    display: none;
+    border-radius: 0 0 4px 4px;
 }
