--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TachMonShop</title>
-  <link rel="icon" type="image/x-icon" href="icon-logo.png">
+  <link rel="icon" type="image/x-icon" href="//localhost:9000/icon-logo.png">
   <!--
     Remove this if you only support browsers that support async/await.
     This is needed by babel to share largeish helper code for compiling async/await in older
