--- a/client/apps/404/src/root.css
+++ b/client/apps/404/src/root.css
@@ -10,7 +10,7 @@
         margin: 40px 0;
     }
 
-    section > a {
+    section>a {
         display: flex;
         border-radius: 4px;
         height: 56px;
@@ -19,6 +19,14 @@
         align-items: center;
         background-color: var(--color-danger);
         color: var(--color-white)
+    }
+
+    section>a:hover {
+        background-color: hsl(from var(--color-danger) h s calc(0.8*l));
+    }
+
+    section>a:focus {
+        background-color: hsl(from var(--color-danger) h s calc(0.5*l));
     }
 }
 
