feat: Add navbar function and responsive footer

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -54,7 +54,8 @@
         "@TachMonShop/navbar": "//localhost:10000/TachMonShop-navbar.js",
         "@TachMonShop/styleguide": "//localhost:11000/TachMonShop-styleguide.js",
         "@TachMonShop/footer": "//localhost:10001/TachMonShop-footer.js",
-        "@TachMonShop/root-config": "//localhost:9000/TachMonShop-root-config.js"
+        "@TachMonShop/root-config": "//localhost:9000/TachMonShop-root-config.js",
+        "@TachMonShop/api": "//localhost:3939/TachMonShop-api.js"
       }
     }
     </script>
