--- a/client/styleguide/src/tailwind.css
+++ b/client/styleguide/src/tailwind.css
@@ -18,7 +18,7 @@
   --color-white: #fdfffc;
   --color-black: #171817;
   --color-overlay: #b3b3b3;
-  font-family: "Inter", san-serif;
+  font-family: "Quicksand", san-serif;
   font-weight: 400;
 }
 
