--- a/client/apps/navbar/src/navbar.css
+++ b/client/apps/navbar/src/navbar.css
@@ -22,6 +22,7 @@ input:focus {
     border-radius: 4px;
     vertical-align: text-top;
     background-color: var(--color-secondary);
+    z-index: 100;
 }
 
 .search-box * {
@@ -42,4 +43,52 @@ input:focus {
 
 .border-bottom {
     border-bottom: 1px solid var(--color-overlay);
+}
+
+.navbar-current-route {
+    border-bottom: 1px solid var(--color-overlay);
+}
+
+.action-bar {
+    button:hover {
+        background-image: linear-gradient(rgb(0 0 0/5%) 0 0);
+    }
+}
+
+.button-show-popup {
+    background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
+}
+
+#login-popup {
+    padding: 10px 0px;
+
+    li {
+        width: 100%;
+        padding: 10px;
+    }
+
+    li:hover {
+        background-image: linear-gradient(rgb(0 0 0/5%) 0 0);
+    }
+
+    li:focus {
+        background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
+    }
+}
+
+.suggestion-input-box {
+    padding: 2px 0px;
+
+    li {
+        width: 100%;
+        padding: 4px;
+    }
+
+    li:hover {
+        background-image: linear-gradient(rgb(0 0 0/5%) 0 0);
+    }
+
+    li:focus {
+        background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
+    }
 }
