--- a/client/styleguide/src/components/nav-route/nav-route.css
+++ b/client/styleguide/src/components/nav-route/nav-route.css
@@ -1,6 +1,8 @@
 .nav-route {
     color: var(--color-overlay);
     font-size: 14px;
+    font-family: 'Quicksand', sans-serif;
+    vertical-align: bottom;
     display: flex;
     gap: 12px;
     flex-wrap: wrap;
