--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -65,7 +65,8 @@
           "@TachMonShop/home": "//localhost:10002/TachMonShop-home.js",
           "@TachMonShop/login": "//localhost:10003/TachMonShop-login.js",
           "@TachMonShop/404": "//localhost:404/TachMonShop-not-found.js",
-          "@TachMonShop/product": "//localhost:10004/TachMonShop-product.js"
+          "@TachMonShop/product": "//localhost:10004/TachMonShop-product.js",
+          "@TachMonShop/cart": "//localhost:10005/TachMonShop-cart.js"
         }
       }
     </script>
