--- a/client/apps/login/src/index.css
+++ b/client/apps/login/src/index.css
@@ -1,14 +1,21 @@
 #account {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 10px;
     margin-left: 9.4%;
-    width: 25.69%;
+    justify-content: center;
+    flex-grow: 1;
+
+    input:focus-visible {
+        outline: none;
+    }
 }
 
 #brand {
     border-radius: 8px;
     width: 50%;
+    min-width: 400px;
 }
 
 .option {
@@ -58,12 +65,32 @@ p {
 }
 
 #wrapper {
-    align-items: center;
+    align-items: stretch;
     display: flex;
     font-family: 'Quicksand';
     height: 100%;
     justify-content: center;
     width: 100%;
+    margin: 40px 0px;
+    padding: 0px 10px;
+}
+
+@media (max-width: 800px) {
+    #wrapper {
+        margin: 10px 0px;
+    }
+
+    #brand {
+        display: none;
+    }
+
+    #account {
+        margin-left: 0px;
+        align-items: stretch;
+        width: 100%;
+        padding: 0px 10px;
+        text-align: center;
+    }
 }
 
 @font-face {
