--- a/client/apps/wishlist/src/index.css
+++ b/client/apps/wishlist/src/index.css
@@ -1,4 +1,15 @@
-.discount-tag {
+#action {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: white;
+    color: white;
+    padding: 8px;
+    font-size: 0.8em;
+}
+
+.discount-tag,
+.new-tag {
     position: absolute;
     top: 10px;
     left: 10px;
