fix: Recreate theme in login

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -66,7 +66,9 @@
           "@TachMonShop/login": "//localhost:10003/TachMonShop-login.js",
           "@TachMonShop/404": "//localhost:404/TachMonShop-not-found.js",
           "@TachMonShop/product": "//localhost:10004/TachMonShop-product.js",
-          "@TachMonShop/cart": "//localhost:10005/TachMonShop-cart.js"
+          "@TachMonShop/cart": "//localhost:10005/TachMonShop-cart.js",
+          "@TachMonShop/account": "//localhost:10006/TachMonShop-account.js",
+          "@TachMonShop/wishlist": "//localhost:10007/TachMonShop-wishlist.js"
         }
       }
     </script>
