fix: Fix wishlish UI

--- a/client/apps/wishlist/src/index.css
+++ b/client/apps/wishlist/src/index.css
@@ -68,7 +68,7 @@
     justify-content: space-between;
 }
 
-#wrapper {
+#wrapper-wishlist {
     display: flex;
     font-family: 'Quicksand';
     flex-direction: column;
