--- a/client/styleguide/src/tailwind.css
+++ b/client/styleguide/src/tailwind.css
@@ -50,3 +50,11 @@
 ::-webkit-scrollbar:horizontal {
   height: 0px;
 }
+
+.default-btn:hover {
+  background-image: linear-gradient(rgb(0 0 0/5%) 0 0);
+}
+
+.default-btn:active {
+  background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
+}
