feat: Add billing to router

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -68,7 +68,8 @@
           "@TachMonShop/product": "//localhost:10004/TachMonShop-product.js",
           "@TachMonShop/cart": "//localhost:10005/TachMonShop-cart.js",
           "@TachMonShop/account": "//localhost:10006/TachMonShop-account.js",
-          "@TachMonShop/wishlist": "//localhost:10007/TachMonShop-wishlist.js"
+          "@TachMonShop/wishlist": "//localhost:10007/TachMonShop-wishlist.js",
+          "@TachMonShop/billing": "//localhost:10008/TachMonShop-billing.js"
         }
       }
     </script>
