feat: Merge API to product

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -69,7 +69,9 @@
           "@TachMonShop/cart": "//localhost:10005/TachMonShop-cart.js",
           "@TachMonShop/account": "//localhost:10006/TachMonShop-account.js",
           "@TachMonShop/wishlist": "//localhost:10007/TachMonShop-wishlist.js",
-          "@TachMonShop/billing": "//localhost:10008/TachMonShop-billing.js"
+          "@TachMonShop/billing": "//localhost:10008/TachMonShop-billing.js",
+          "@TachMonShop/about": "//localhost:10009/TachMonShop-about.js",
+          "@TachMonShop/contact": "//localhost:10010/TachMonShop-contact.js"
         }
       }
     </script>
