--- a/client/apps/manage-products/src/index.css
+++ b/client/apps/manage-products/src/index.css
@@ -1,3 +1,108 @@
+button {
+    background-color: transparent;
+    border: 0px;
+    padding: 0px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.classify {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+}
+
+#filter {
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+    gap: 32px;
+    margin-bottom: 10px;
+}
+
+.function {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    position: absolute;
+    right: 8px;
+    top: 12px;
+}
+
+.info {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+}
+
+.info img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+}
+
+#list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 30px;
+    margin-bottom: 35px;
+    margin-top: 35px;
+}
+
+.name {
+    background-color: black;
+    bottom: 0px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    justify-content: center;
+    padding: 8px 6px;
+    position: absolute;
+    text-align: center;
+    width: calc(100% - 11px);
+}
+
+option {
+    font-family: 'Inter';
+    font-size: 16px;
+}
+
+.product {
+    border: 0.5px solid rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    height: 0px;
+    padding-bottom: 100%;
+    position: relative;
+    width: 100%;
+}
+
+select {
+    background-color: transparent;
+    border: 0px;
+    font-family: 'Inter';
+    font-size: 20px;
+}
+
+select:hover {
+    cursor: pointer;
+}
+
+#wrapper {
+    font-family: 'Quicksand';
+    margin-left: 9.375%;
+    margin-right: 9.375%;
+    margin-top: 80px;
+}
+
 @font-face {
     font-family: 'Quicksand';
     src: url('../assets/fonts/Quicksand.ttf') format('truetype');
@@ -13,7 +118,7 @@
 }
 
 @media (min-width: 768px) {
-    .product-grid {
-        grid-template-columns: repeat(4, 1fr);
+    #list {
+        grid-template-columns: repeat(5, 1fr);
     }
 }
