feat: Search & fix API bug

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -71,7 +71,8 @@
           "@TachMonShop/wishlist": "//localhost:10007/TachMonShop-wishlist.js",
           "@TachMonShop/billing": "//localhost:10008/TachMonShop-billing.js",
           "@TachMonShop/about": "//localhost:10009/TachMonShop-about.js",
-          "@TachMonShop/contact": "//localhost:10010/TachMonShop-contact.js"
+          "@TachMonShop/contact": "//localhost:10010/TachMonShop-contact.js",
+          "@TachMonShop/search": "//localhost:10011/TachMonShop-search.js"
         }
       }
     </script>
