--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -55,7 +55,8 @@
         "@TachMonShop/styleguide": "//localhost:11000/TachMonShop-styleguide.js",
         "@TachMonShop/footer": "//localhost:10001/TachMonShop-footer.js",
         "@TachMonShop/root-config": "//localhost:9000/TachMonShop-root-config.js",
-        "@TachMonShop/api": "//localhost:3939/TachMonShop-api.js"
+        "@TachMonShop/api": "//localhost:3939/TachMonShop-api.js",
+        "@TachMonShop/notification": "//localhost:9001/TachMonShop-notification.js"
       }
     }
     </script>
