--- a/client/apps/manage-products/src/index.css
+++ b/client/apps/manage-products/src/index.css
@@ -79,6 +79,7 @@ option {
 .product {
     border: 0.5px solid rgba(0, 0, 0, 0.5);
     border-radius: 4px;
+    font-family: 'Quicksand';
     height: 0px;
     padding-bottom: 100%;
     position: relative;
