--- a/client/apps/orderlist/src/index.css
+++ b/client/apps/orderlist/src/index.css
@@ -21,8 +21,23 @@ a:hover {
     margin-top: 20px;
 }
 
+input {
+    background-color: #e4e4e4;
+    border: 0px;
+    border-radius: 4px;
+}
+
 .list {
     width: 100%;
+}
+
+.message {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+    display: flex;
+    gap: 12px;
+    padding: 12px;
 }
 
 .mode {
@@ -45,6 +60,28 @@ a:hover {
     font-weight: 600;
     margin-left: 8px;
     width: 100%;
+}
+
+.star-rating {
+    direction: rtl;
+    display: inline-flex;
+}
+
+.star-rating input[type="radio"] {
+    display: none;
+}
+
+.star-rating label {
+    color: #ccc;
+    font-size: 18px;
+    padding: 0 5px;
+    cursor: pointer;
+}
+
+.star-rating label:hover,
+.star-rating label:hover~label,
+.star-rating input[type="radio"]:checked~label {
+    color: #f5eb3b;
 }
 
 .status {
