Ghép APi Voucher

--- a/client/apps/voucher/src/index.css
+++ b/client/apps/voucher/src/index.css
@@ -1,6 +1,9 @@
 #add {
+    background-color: #dfdfdf;
     border: 0px;
     border-radius: 6px;
+    display: flex;
+    justify-content: center;
     padding: 10px;
 }
 
