--- a/client/apps/account/src/index.css
+++ b/client/apps/account/src/index.css
@@ -22,6 +22,41 @@ input {
   padding: 12px 16px;
 }
 
+.image-upload {
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+}
+
+.image-upload img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Đảm bảo ảnh được phủ kín không gian mà không bị méo */
+}
+
+.image-upload input[type="file"] {
+  opacity: 0;
+  /* Ẩn input file nhưng vẫn có thể click */
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  /* Hiển thị con trỏ như khi hover vào button */
+}
+
+.image-upload>img {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 60px;
+  height: 122px;
+  width: 122px;
+}
+
 input:focus {
   outline: none;
 }
@@ -55,6 +90,10 @@ input:focus {
 .menu-title {
   font-weight: 700;
   margin-bottom: 16px;
+}
+
+.notify {
+  color: #db4444;
 }
 
 #route {
