feat: Link Quốc's UI to root-config

--- a/client/root-config/src/index.ejs
+++ b/client/root-config/src/index.ejs
@@ -73,7 +73,11 @@
           "@TachMonShop/billing": "//localhost:10008/TachMonShop-billing.js",
           "@TachMonShop/about": "//localhost:10009/TachMonShop-about.js",
           "@TachMonShop/contact": "//localhost:10010/TachMonShop-contact.js",
-          "@TachMonShop/search": "//localhost:10011/TachMonShop-search.js"
+          "@TachMonShop/search": "//localhost:10011/TachMonShop-search.js",
+          "@TachMonShop/manage-products": "//localhost:10012/TachMonShop-manage-products.js",
+          "@TachMonShop/orderlist": "//localhost:10013/TachMonShop-orderlist.js",
+          "@TachMonShop/statistics": "//localhost:10014/TachMonShop-statistics.js",
+          "@TachMonShop/voucher": "//localhost:10015/TachMonShop-voucher.js"
         }
       }
     </script>
