fix: UI Voucher

--- a/client/apps/voucher/src/index.css
+++ b/client/apps/voucher/src/index.css
@@ -81,6 +81,7 @@ select:hover {
     margin-left: 9.375%;
     margin-right: 9.375%;
     margin-top: 32px;
+    margin-bottom: 20px;
 }
 
 @font-face {
