--- a/client/apps/manage-products/src/index.css
+++ b/client/apps/manage-products/src/index.css
@@ -48,11 +48,16 @@ button:hover {
 }
 
 #list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     margin-bottom: 35px;
     margin-top: 35px;
+
+    > * {
+        width: 250px;
+        height: 400px;
+    }
 }
 
 .name {
@@ -68,7 +73,7 @@ button:hover {
     padding: 8px 6px;
     position: absolute;
     text-align: center;
-    width: calc(100% - 11px);
+    width: 100%;
 }
 
 option {
@@ -76,12 +81,11 @@ option {
     font-size: 16px;
 }
 
-.product {
+.product-in-manager {
     border: 0.5px solid rgba(0, 0, 0, 0.5);
     border-radius: 4px;
     font-family: 'Quicksand';
     height: 0px;
-    padding-bottom: 100%;
     position: relative;
     width: 100%;
 }
@@ -99,8 +103,6 @@ select:hover {
 
 #wrapper {
     font-family: 'Quicksand';
-    margin-left: 9.375%;
-    margin-right: 9.375%;
     margin-top: 80px;
 }
 
@@ -116,10 +118,4 @@ select:hover {
     src: url('../assets/fonts/Inter.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
-
-@media (min-width: 768px) {
-    #list {
-        grid-template-columns: repeat(5, 1fr);
-    }
 }
