--- a/client/apps/manage-products/src/index.css
+++ b/client/apps/manage-products/src/index.css
@@ -14,6 +14,25 @@ button:hover {
     gap: 10px;
 }
 
+#close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.del-button {
+    border-radius: 6px;
+    font-family: 'Quicksand';
+    font-size: 14px;
+    padding: 12px;
+}
+
+.detail {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 #filter {
     align-items: center;
     display: flex;
@@ -29,6 +48,38 @@ button:hover {
     position: absolute;
     right: 8px;
     top: 12px;
+}
+
+.images {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+
+.image-upload {
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-upload img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* Đảm bảo ảnh được phủ kín không gian mà không bị méo */
+}
+
+.image-upload input[type="file"] {
+    opacity: 0;
+    /* Ẩn input file nhưng vẫn có thể click */
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    /* Hiển thị con trỏ như khi hover vào button */
 }
 
 .info {
@@ -47,12 +98,45 @@ button:hover {
     object-fit: contain;
 }
 
+input {
+    background-color: transparent;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Quicksand';
+    padding: 4px;
+}
+
+input:focus {
+    outline: none;
+}
+
 #list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 30px;
     margin-bottom: 35px;
     margin-top: 35px;
+}
+
+#minus {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    height: 100%;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+.modal {
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    font-family: 'Quicksand';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 
 .name {
@@ -76,6 +160,25 @@ option {
     font-size: 16px;
 }
 
+.panel {
+    background-color: white;
+    border-radius: 6px;
+    margin-top: 64px;
+    margin-left: 8%;
+    margin-right: 8%;
+    padding: 32px 16px;
+}
+
+#plus {
+    background-color: #db4444;
+    border: 1px sold rgba(0, 0, 0, 0.5);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    height: 100%;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
 .product {
     border: 0.5px solid rgba(0, 0, 0, 0.5);
     border-radius: 4px;
@@ -84,6 +187,28 @@ option {
     padding-bottom: 100%;
     position: relative;
     width: 100%;
+}
+
+.product-detail {
+    display: flex;
+    font-family: 'Quicksand';
+    font-size: 14px;
+    justify-content: space-between;
+}
+
+#quantity {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    height: 100%;
+    font-family: 'Quicksand';
+    font-size: 18px;
+    padding: 0px;
+    text-align: center;
+}
+
+.row {
+    align-items: center;
+    display: flex;
+    gap: 6px
 }
 
 select {
@@ -95,6 +220,18 @@ select {
 
 select:hover {
     cursor: pointer;
+}
+
+textarea {
+    background-color: transparent;
+    border: none;
+    font-family: 'Quicksand';
+    font-size: 14px;
+    width: 100%;
+}
+
+textarea:focus {
+    outline: none;
 }
 
 #wrapper {
