--- a/client/apps/statistics/src/index.css
+++ b/client/apps/statistics/src/index.css
@@ -1,7 +1,6 @@
 .time-machine {
     display: flex;
-    gap: 10px;
-    justify-content: space-between;
+    gap: 30%;
 
     >div {
         display: flex;
@@ -43,8 +42,20 @@
     font-family: 'Quicksand';
     font-size: 16px;
     font-weight: 700;
+    gap: 10px;
     justify-content: space-between;
     padding-bottom: 20px;
+
+    >input {
+        border: 1px solid rgba(0, 0, 0, 0.3);
+        border-radius: 4px;
+        padding: 3px 6px;
+    }
+
+    >input:focus {
+        outline: 1px solid rgba(0, 0, 0, 0.1);
+
+    }
 }
 
 .detail-property {
@@ -90,6 +101,7 @@
 }
 
 .range-date {
+    display: flex;
     font-size: 24px;
     font-weight: 500;
     text-align: center;
