--- a/client/apps/orderlist/src/index.css
+++ b/client/apps/orderlist/src/index.css
@@ -22,7 +22,7 @@ a:hover {
 
 input {
     background-color: #e4e4e4;
-    border: 0px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 4px;
 }
 
@@ -43,7 +43,8 @@ input {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    min-width: 60px;}
+    min-width: 60px;
+}
 
 .navigator {
     font-size: 14px;
